--- a/proyecto02/Pages/Shared/_Layout.cshtml
+++ b/proyecto02/Pages/Shared/_Layout.cshtml
@@ -26,27 +26,25 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Visual/Historial">Historial</a>
                         </li>
+                        
                     </ul>
+                    <a asp-page="/Visual/Login">
+                        <button class="btn-iniciar-sesion">Iniciar Sesión</button>
+                    </a>
                 </div>
-                <a href="/Visual/Login">Iniciar Sesion</a>  
-                <a href="/Visual/Login">
-                    <button style="background-color:darkgray;color:Black;padding:15px 35px;text-align:center"><b>Inisiar Sesion</b></button>
-                </a>
+                
+               
             </div>
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container-flud"p-0>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            <b>Vista Preview</b>
-        </div>
-    </footer>
+    
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
