--- a/proyecto02/Pages/Visual/GestionProyectos.cshtml
+++ b/proyecto02/Pages/Visual/GestionProyectos.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "GestionProyectos";
 }
-<div id="Servicios" style="width:300px; height:600px">
-    <div><img src="/lib/imagenes/PortadaServicios.jpg"</div>
-</div>
+<body>
+    <header>
+        <img src="~/images/recurso01.jpg" style="width:10%;height:100%" />
+    </header>
+</body>
