--- a/proyecto02/Pages/Index.cshtml
+++ b/proyecto02/Pages/Index.cshtml
@@ -2,6 +2,7 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Builtracker-7";
+    Layout = "/Pages/Shared/_Layout.cshtml";
 }
 <link rel="stylesheet" href="~/css/estiloIndex.css" />
 
