--- a/proyecto02/Pages/Visual/Registro.cshtml
+++ b/proyecto02/Pages/Visual/Registro.cshtml
@@ -1,10 +1,8 @@
 ﻿@page
-@model proyecto02.Pages.Visual.LoginModel
+@model proyecto02.Pages.Visual.RegistroModel
 @{
-    ViewData["Title"] = "Login";
-     Layout = "/Pages/Shared/_LayoutLogin.cshtml";
+    Layout = "/Pages/Shared/_LayoutLogin.cshtml";
 }
-
 <head>
     <title>Inicio de sesion</title>
 </head>
@@ -31,7 +29,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Ingresar</button>
                 <br />
-                <a href="/Visual/Registro">Registrar Usuario</a>
+                <a href="/Visual/Historial">Historial</a>
             </form>
 
         </div>
