--- a/proyecto02/Pages/Index.cshtml
+++ b/proyecto02/Pages/Index.cshtml
@@ -85,7 +85,7 @@
 
                 <span class="somos-pie">
                     Envia tu duda a soporte <br>
-                    <a href="mailto:chivoblogn@gmail.com?subject=Contacto&body=Prueba email" class="enlace1">Click aquí para enviar email</a>
+                    <a href="mailto:alfredo.rodriguez@mail.utec.edu.sv?subject=Contacto&body=Prueba email" class="enlace1">Click aquí para enviar email</a>
                     @*  <a href="quienes_somos.html" class="enlace1">Sobre nuestra empresa</a> *@
                 </span>
             </div>
