--- a/proyecto02/Pages/Visual/Registro.cshtml
+++ b/proyecto02/Pages/Visual/Registro.cshtml
@@ -27,9 +27,9 @@
                     <input type="password" class="form-control" asp-for="Credential.Password" placeholder=" Contraseña">
                     <span class="text-danger" asp-validation-for="Credential.Password"></span>
                 </div>
-                <button type="submit" class="btn btn-primary">Ingresar</button>
+                <button type="submit" class="btn btn-primary" >Registrar</button>
                 <br />
-                <a href="/Visual/Historial">Historial</a>
+                <a href="/Visual/Login">Iniciar Sesion</a>
             </form>
 
         </div>
